<package format="3">
  <name>amiga_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo simulation package for the Amiga robot.</description>

  <maintainer email="alireza.ahmadi@uni-bonn.de">Alireza Ahmadi</maintainer>
  <author email="alireza.ahmadi@uni-bonn.de">Alireza Ahmadi</author>

  <license>BSD</license>


  <buildtool_depend>ament_cmake</buildtool_depend>


  <!--  <depend>amiga_description</depend> -->
  <depend>gazebo_ros</depend>


  <export>

  </export>
</package>

