<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amiga_ros2_gazebo</name>
  <version>0.0.1</version>
  <description>
    Gazebo (Ignition Fortress) simulation of the farm-ng Amiga base with a
    Kinova Gen3 arm. Impersonates the hardware layer (farm-ng bridge, depthai
    cameras, kortex hardware) at the ROS topic boundary so localization, Nav2,
    behavior trees and kortex arm control run unchanged against sim or target.
  </description>
  <maintainer email="maintainer@example.com">Amiga</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>amiga_ros2_description</exec_depend>
  <exec_depend>kortex_description</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
