<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amiga_ros2_mission_planner</name>
  <version>0.0.0</version>
  <description>LLM-powered mission planner — edits BT.CPP XML by 1-3 lines on failure</description>
  <maintainer email="appuser@todo.todo">appuser</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>ament_index_python</depend>
  
  <exec_depend>amiga_ros2_behavior_tree</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>